--- a/GP/普物2笔记_光量.md
+++ b/GP/普物2笔记_光量.md
@@ -286,7 +286,7 @@ $\begin{cases} d\sin\theta = k(\lambda+\Delta\lambda) \\ Nd\sin\theta = (kN+1)\l
 
 **Brewster’s Law**
 
-当反射光与折射光垂直时两光均为偏振光
+当反射光与折射光垂直时两光~~均为偏振光~~，反射光为偏振光(<u>偏振方向垂直于法平面</u>)，折射光为部分偏振光
 
 $\begin{cases} i+r=90^\circ \\ n_1\sin i = n_2\sin r \end{cases} \Longrightarrow \tan i = \frac{n_2}{n_1} = n_{21}\Longrightarrow i = \arctan(n_{21})$，这个i称为布儒斯特角
 
