--- a/GP/普物2笔记_电磁.md
+++ b/GP/普物2笔记_电磁.md
@@ -1,7 +1,6 @@
 # 普物笔记
 
 <div align = "right"><b>Powered by CXY</b></div>
-
 [TOC]
 
 ## *Electric
@@ -855,6 +854,16 @@ $$
 **真空条件下**(否则本来应该用D与H来表示)
 $$
 \left \{ \begin{array}{}
+	\mathop\oint_A \vec D \cdot d \vec A = \sum q
+	\\
+	\mathop\oint_A \vec B \cdot d \vec A = 0
+	\\
+	\mathop\oint_L \vec E \cdot d \vec l = -\int \frac{\partial \vec B}{\partial t} \cdot d \vec A
+	\\
+	\mathop\oint_L \vec H \cdot d \vec l = (\sum i + \int \frac{\partial \vec D}{\partial t} \cdot d \vec A)
+\end{array} \right.
+
+\Longrightarrow\left \{ \begin{array}{}
 	\mathop\oint_A \vec E \cdot d \vec A = \frac{\sum q}{\varepsilon_0}
 	\\
 	\mathop\oint_A \vec B \cdot d \vec A = 0
