--- a/GP/普物2重要公式.md
+++ b/GP/普物2重要公式.md
@@ -164,6 +164,7 @@ $$
 | $\mathop\oint_s\vec P \cdot d \vec A = - \sum_{(ins)}q'_i$   | $\mathop\oint_s\vec M \cdot d \vec l = \sum_{(ins)}i_m$      |
 | $\vec D = \varepsilon_0 \vec E + \vec P= \varepsilon_0 \vec E_0$ | $\vec H = \frac{\vec B}{\mu_0} - \vec M$                     |
 | $\oint \vec D \cdot d \vec A = \sum_{ins}q_0$                | $\oint \vec H \cdot d \vec l = \sum_{ins}i_0$                |
+| \sigma = \vec p \cdot \vec n                                 | \vec j = \vec M \times \vec n                                |
 
 ###### 电磁波
 
