--- a/LCDF/数逻注意事项.md
+++ b/LCDF/数逻注意事项.md
@@ -27,3 +27,12 @@ Gate Input Cost: 门电路输入引脚的个数
 ---
 
 $\sum_d(,,)$表示 Don't care
+
+---
+
+(r-1)'s complement: (2^n^-1) - N
+
+r's complement: (2^n^-1) - N + 1 = 2^n^ - N
+
+---
+
