--- a/LCDF/数逻笔记.md
+++ b/LCDF/数逻笔记.md
@@ -4,26 +4,39 @@
 >
 > 1. 施青松老师要求逻辑证明题要写出两补之间是用什么公式推出的
 
-## Ch1&2 布尔代数
+# Ch1&2 布尔代数
 
-### Basic Equation
+## Basic Equation
 
-#### Covering Law:
-
+**Covering Law**
 $$
-A(A+B)=A+AB=A(1+B)=A\\
-A(\overline A+B)=AB\\
-absorption:A+\overline AB=A+B\\
+\begin{cases}
+	A(A+B)=A+AB=A(1+B)=A\\
+	A + AB = A\\
+\end{cases}
 $$
 
-#### Consensus Law:
-
+**Absorption Law**
 $$
+\begin{cases}
+	A + \overline A B = A + B
+	\\
+	A(\overline A + B) = AB
+\end{cases}
+$$
+
+
+**Consensus Law**
+$$
+\begin{cases}
 (A+B)(\overline A+C)(B+C)=(A+B)(\overline A+C)\\
 AB+\overline AC+BC=AB+\overline AC
+\end{cases}
 $$
 
-#### Duality Rules
+**Duality Rules**
+
+The duality principle of Boolean algebra states that a Boolean equation **remains valid** if we take the dual of the expressions on both sides of the equals sign.
 
 将F中
 
@@ -35,9 +48,11 @@ $$
 
 1$\Longrightarrow$ 0
 
+==<font color = "$FF0000">Variable don't Inverses !!!</font>==
+
 记作F'
 
-#### Substitution rules
+**Substitution rules**
 
 将逻辑等式中的变量A全部换为函数F，则等式仍成立
 
@@ -48,7 +63,7 @@ X(Y+Z)=XY+XZ， if\ X + YZ\\Instead\ of\ X，then\ equation\ still\ holds:\\
 $$
 
 
-#### Shannon Formula
+### Shannon Formula
 
 $$
 xf(x,\overline x,...,z)=xf(1,0,...,z)\\
@@ -57,7 +72,7 @@ x+f(x,\overline x,...,z)=x+f(0,1,...,z)\\
 \overline x+f(x,\overline x,...,z)=\overline x+f(1,0,...,z)\\
 $$
 
-##### Shannon Expansion
+#### Shannon Expansion
 
 $$
 f(x1,x2,x3)\\
@@ -71,45 +86,47 @@ $$
 
 ---
 
-### Logic Gate Circuit
+## Logic Gate Circuit
 
-#### Gate Delay
+### Gate Delay
 
-##### Propagation Delay
+#### Propagation Delay
 
 ==HL & LH==
 
 ![image-20190927161322738](数逻笔记.assets/image-20190927161322738.png)
 
-##### Delay Mode
+#### Delay Mode
 
-Transport delay & Inertial delay (interval <= *rejection time*)
+Transport delay & Inertial delay (interval <= ***rejection time***)
 
 
 
 ![image-20190927161427162](数逻笔记.assets/image-20190927161427162.png)
 
-#### Primitive Logic Gate Circuit
+### Primitive Logic Gate Circuit
 
 ![page67image48786816.png](数逻笔记.assets/page67image48786816.png) 
 
-##### NAND
+**Universal Gates**$\begin{cases} NAND \\ NOR \end{cases}$
+
+#### NAND
 
 $\overline {AB} = \overline A+\overline B$
 
-##### NOR
+#### NOR
 
 $\overline {A+B} = \overline A\overline B$
 
 ---
 
-#### Complex Logic Gate Circuit
+### Complex Logic Gate Circuit
 
 ![page68image48715872.png](数逻笔记.assets/page68image48715872.png) 
 
-##### AND-OR-INVERT
+#### AND-OR-INVERT
 
-##### Exclusive OR (XOR)
+#### Exclusive OR (XOR)
 
 $A \oplus B = A\overline B+\overline AB$
 
@@ -117,19 +134,19 @@ $A \oplus B = A\overline B+\overline AB$
 
 若有两个则为全加器
 
-##### Exclusive NOR(XNOR/异或非/同或)
+#### Exclusive NOR(XNOR/异或非/同或)
 
 $A\odot B=\overline{A\oplus B} = AB+\overline A\overline B$
 
 ---
 
-#### Hi-Impedance(Hi-Z)
+### Hi-Impedance(Hi-Z)
 
 add a third logic value
 
-##### 3-state 
+#### 3-state 
 
-##### Ex. 3-state buffer
+#### Ex. 3-state buffer
 
 ![image-20190926141045620](数逻笔记.assets/image-20190926141045620.png)
 
@@ -137,7 +154,7 @@ add a third logic value
 
 ![image-20190926142424116](数逻笔记.assets/image-20190926142424116.png)
 
-##### Ex. 3-state gate
+#### Ex. 3-state gate
 
 Transmission gate(TG)
 
@@ -153,16 +170,16 @@ Transmission gate(TG)
 
 ---
 
-### Simplification
+## Simplification
 
-#### Condition(Requests)
+### Condition(Requests)
 
-##### AND-OR style
+#### AND-OR style
 
 1. "AND-item" is least in expression; (与项最少)
 2. 满足1的条件下，与项中变量最少
 
-##### OR-AND style
+#### OR-AND style
 
 要求同上
 
@@ -174,7 +191,7 @@ Transmission gate(TG)
 
    ![image-20190926144508444](数逻笔记.assets/image-20190926144508444.png)
 
-#### Canonical Forms
+### Canonical Forms
 
 * It is useful to specify Boolean functions in a form that:
   * Allows comparison for equality.
@@ -183,40 +200,40 @@ Transmission gate(TG)
   * Sum of Minterms (SOM)
   * Product of Maxterms (POM)
 
-##### Miniterm
+#### Minterm
 
 denots as m~i~
 
 m~i~m~j~=0
 
-###### ==Sum-of-Miniterms：找1term1==
+##### ==Sum-of-Minterms：找1term1==
 
-##### Maxterm
+#### Maxterm
 
 denotes as M~i~
 
 M~i~+M~j~=1
 
-###### ==Product-of-Maxterms：找0term0==
+##### ==Product-of-Maxterms：找0term0==
 
-##### Relationship
+#### Relationship
 
-==Miniterm(E+F) = Miniterm(E) + Miniterm(F); Miniterm(E·F) = Miniterm(E) · Miniterm(F);==
+==Minterm(E+F) = Minterm(E) + Minterm(F); Minterm(E·F) = Minterm(E) · Minterm(F);==
 
 可以表示成$\displaystyle\sum$或$\displaystyle\prod$的形式
 
 
 
-#### K-Map
+### K-Map
 
 |  00  |  01  |  11  |  10  |      |      |      |      |
 | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
 | 000  | 001  | 011  | 010  | 110  | 111  | 101  | 100  |
-##### Implicant
+#### Implicant
 
 Dimensional Block constitute by the "AND-term" in the K-map (fill 1 grid rectangle)
 
-##### Prime Implicant
+#### Prime Implicant
 
 质蕴涵项，简称为质项。
 
@@ -227,11 +244,11 @@ Dimensional Block constitute by the "AND-term" in the K-map (fill 1 grid rectang
 
 is a product term obtained by combining the maximum possible number of adjacent squares in the map into a rectangle with the number of squares a power of 2.
 
-##### Essential Prime Implicant
+#### Essential Prime Implicant
 
 > If a minterm of a function is included in only one prime implicant, that prime implicant is said to be *essential*.
 >
-> 有一个miniterm，只在这个PM中出现，这个PM就是EPM
+> 有一个Minterm，只在这个PM中出现，这个PM就是EPM
 
 ~~it is the **only** prime implicant that covers (includes) one or more minterms~~(施青松ppt里这个only乱加)
 
@@ -239,17 +256,16 @@ without in another prime implicant.
 
 ![image-20190926152506109](数逻笔记.assets/image-20190926152506109.png)
 
-##### 两个K-Map的融合
+#### 两个K-Map的融合
 
 
 
-##### K-MAP化简为AND-OR形式
+#### K-MAP化简为AND-OR形式
 
 找相邻的、翻转对称的
 
-Miniterm：找1
-
-Maxterm：找0取反
+* Minterm：找1
+* Maxterm：找0取反，如下
 
 <img src="数逻笔记.assets/image-20190926152910697.png" alt="image-20190926152910697" style="zoom:50%;" />
 
@@ -259,7 +275,7 @@ Maxterm：找0取反
 > 
 > I know why now
 
-##### K-MAP化简为OR-AND形式
+#### K-MAP化简为OR-AND形式
 
 找0的 $\Longrightarrow$ 写出 $\overline F$ 的AND-OR形式 $\Longrightarrow$ 直接取反
 
@@ -274,11 +290,13 @@ Maxterm：找0取反
 >
 > $F = (\overline A + \overline B)(\overline C + \overline D)(\overline B + D)$
 
-#### Implicant Table(蕴含表达式)
+### Implicant Table(蕴含表达式)
 
-#### Don't-Care
+### Don't-Care
 
-## 语言
+用$\large\sum_d$表示
+
+# 语言
 
 ```verilog
 input wire s1;
@@ -286,17 +304,21 @@ input wire s1;
 reg [7:0] C;
 ```
 
-## Ch3
+# Ch3
 
-#### 二补码
+### 二补码
 
 (r-1)'s complement: (2^n^-1) - N
 
 r's complement: (2^n^-1) - N + 1 = 2^n^ - N
 
-## Ch4 时序电路
+# Ch4 时序电路
 
-### 基本概念
+==$\begin{cases} 触发器：flipflop\\锁存器：latch\end{cases}$==
+
+Trigger就算了吧
+
+## 基本概念
 
 同步电路与异步电路
 
@@ -315,9 +337,9 @@ r's complement: (2^n^-1) - N + 1 = 2^n^ - N
   * If clock just regarded as another input, all circuits are asynchronous!
   * Nevertheless, the synchronous abstraction makes complex designs tractable!
 
-### 基础模块
+## 基础模块
 
-#### SR锁存器（NOR）
+### SR锁存器（NOR）
 
 | 状态           | S    | R    | Q    | Qn   |
 | ------------- | ---- | ---- | ---- | ---- |
@@ -328,7 +350,7 @@ r's complement: (2^n^-1) - N + 1 = 2^n^ - N
 | 复位           | 0    | 0    | 0    | 1    |
 | 未定义（同时）   | 1    | 1    | x    | x    |
 
-#### SnRn锁存器（NAND）
+### SnRn锁存器（NAND）
 
 | 状态           | Sn   | Rn   | Q    | Qn   |
 | ------------- | ---- | ---- | ---- | ---- |
@@ -339,7 +361,7 @@ r's complement: (2^n^-1) - N + 1 = 2^n^ - N
 | 复位           | 1    | 1    | 0    | 1    |
 | 未定义（同时）   | 0    | 0    | x    | x    |
 
-#### D锁存器
+### D锁存器
 
 D指的是Data
 
@@ -349,15 +371,15 @@ D指的是Data
 | 复位 | 1    | 0    |
 | 置位 | 1    | 1    |
 
-#### 锁存器局限
+### 锁存器局限
 
 **时序问题**
 
 一个触发周期内会一直改变输出无法只改变一次，会不断变化（称为分块）
 
-### 进阶
+## 进阶
 
-#### SR触发器（Clocked SR Latch）
+### SR触发器（Clocked SR Latch）
 
 **两种实现方式**
 
@@ -372,7 +394,7 @@ D指的是Data
 | 置位   | 1    | 1    | 0    |
 | 未定义 | 1    | 1    | 1    |
 
-#### D触发器
+### D触发器
 
 * **正边(上升)沿D触发器**
   * DLatch + SRLatch + 2 × NOR
@@ -381,7 +403,7 @@ D指的是Data
   * DLatch + SRLatch + 1 × NOR
   * symbol：C处有尖角，外侧有小圆
 
-#### 主从与边沿
+### 主从与边沿
 
 * master-slave
   * 步骤
@@ -395,17 +417,17 @@ D指的是Data
 
 ==The edge-triggered D flip-flop is the same as the master- slave D flip-flop==
 
-二者的symbol不一样，见[Chap04_1.pdf](file:///Users/ulysses/Documents/%E5%A4%A7%E4%BA%8C%E4%B8%8A/%E6%95%B0%E9%80%BB/%E7%90%86%E8%AE%BA%20%E8%AF%BE%E4%BB%B6/Chap04_1.pdf)的Slide41
+二者(SR)的symbol不一样，见[Chap04_1.pdf](file:///Users/ulysses/Documents/大二上/LCDF/理论 课件/Chap04_1.pdf)的Slide41
 
 *所以Trigger和Flip-Flop还是不是一个东西？*<u>应该都可以</u>
 
-### 时序电路设计
+## 时序电路设计
 
-#### Moore & Mealy
+### Moore & Mealy
 
 主要区别在于[]中的只有输出还是输入和输出都有
 
-* **Moore**：输出**只**依赖<u>当前状态</u>
+* **Moore**：输出**只**依赖<u>当前状态</u>，输入可以切换状态
   
   * Outputs are a function ONLY of states
   * 因此可以将输出与状态放在一个框里，(状态依然会随输入而改变，但是输出不会)
@@ -442,7 +464,7 @@ D指的是Data
   c --X=0--> a
   ```
   
-* **Mealy**：输出依赖<u>当前状态和输入</u>
+* **Mealy**：输出依赖<u>当前状态和输入</u>，输入不仅会改变状态还会影响输出
 
   * Outputs are a function of inputs AND states
   * On directed arc with the output included:
@@ -471,7 +493,7 @@ D指的是Data
   1 --X=1/Y=1--> 1
   ```
 
-#### State Table
+### State Table
 
 ==注意：输出值一般是与当前量有关==
 
@@ -494,7 +516,7 @@ $D_A = B  \\  D_B = \overline{(A \oplus X)} = A \odot X  \\  Y = (A \oplus X) \o
 | 1    | 1    | 0    | 0      | 1      | 0    |
 | 1    | 1    | 1    | 1      | 1      | 1    |
 
-#### State Diagram
+### State Diagram
 
 Label form:
 
@@ -569,7 +591,7 @@ Label form:
    e --0--> a
    ```
    
-#### 状态赋值
+### 状态赋值
 
 **规则方法**
 
@@ -595,7 +617,7 @@ Label form:
 * 
 * 
 
-#### 状态方程
+### 状态方程
 
 **化简**
 
@@ -604,28 +626,28 @@ Label form:
   * 格雷码可以直接移植（PPT slide38）
 * 独热码需要的触发器比较多
 
-#### 状态机设计
+### 状态机设计
 
 跳过设计状态图和状态表的步骤直接写代码，用`case()`语句。
 
 <u>注意：若在时钟上升沿最后赋output，应是下一个状态的output；若是另写一个always赋值output，则因为是实时赋值，所以是当前状态的output</u>
 
-### Appendix
+## Appendix
 
 * t~w~: clock pulse width
-* t~p**~: propa-gation delay
+* t~p**~: propagation delay
   * t~pd~ = max(t~PHL~,t~PLH~)
 
 * **t~s~与t~h~**
   * 建立(Setup)时间(t~s~)：时钟沿到来前输入数据D必须要稳定的时间
   * 保持(Hold)时间(t~h~)：时钟沿到来后输入数据D必须要稳定的时间
-* **时序电路正确工作所要求的最小时钟周期T为：T>t~Latch~+t~circuit~+t~s~**
+* **时序电路正确工作所要求的最小时钟周期T为：T>t~FF~+t~circuit~+t~s~**
 
 * ~~主从触发器与边缘触发器~~
   * ~~主从式SR触发器在整个clk为H器件的输出都依赖与输入~~
   * 看上面的吧
 
-### 其他触发器
+## 其他触发器
 
 JK触发器
 
@@ -635,20 +657,20 @@ T触发器
 
 * T=1时到相反电平
 
-### 触发器描述
+## 触发器描述
 
-* D
+* **D**
   * Q(t+1) = D
-* T
+* **T**
   * Q(t+1) = T ^ Q
-* SR
+* **SR**
   * Q(t+1) = S + Rn \* Q (S \* R = 0)
-* JK
+* **JK**
   * Q(t+1) = J \* Qn + Kn \* Q
 
-## Ch6
+# Ch6
 
-### 基本定义与概念
+## 基本定义与概念
 
 * 数据通路
   * 包括数据处理逻辑和一组用与执行数据处理的寄存器
@@ -662,13 +684,13 @@ T触发器
   * 在寄存器之间、寄存器与存储器之间、以及通过数据处理逻辑传输信息
   * 由专门的传输硬件（如多路复用器，Selectively use a load control to change the register contents.）和总线一起实现
 
-### 寄存器与加载使能
+## 寄存器与加载使能
 
 **并行加载寄存器**
 
 避免时钟偏移(clock skew)
 
-### 寄存器传输
+## 寄存器传输
 
 数据通路与控制单元的交互
 
@@ -698,7 +720,7 @@ Three essential elements
 * Control: that supervises the sequencing of the register transfers
 
 
-### 微操作(microoperation)
+## 微操作(microoperation)
 
 **基本操作**
 
@@ -715,11 +737,13 @@ Three essential elements
 | * Multiplication | $R_0 \leftarrow R_1 \oplus R_2$ |   |
 | / Division | $R_0 \leftarrow \overline R_1$  | |
 
-### 对单个寄存器的微操作、计数器初步
+## 对单个寄存器的微操作、计数器初步
 
 **基于多路复用器的传输**
 
-`if(K1 == 1) then (R0 <-- R1) else if (K2 == 1) then (R0 <-- R2)`可分解为：$K_1:R0\leftarrow R1;\ \overline{K_1}K_2: R0 \leftarrow R2$
+`if(K1 == 1) then (R0 <-- R1) else if (K2 == 1) then (R0 <-- R2)`可分解为：
+
+$K_1:R0\leftarrow R1\\\overline{K_1}K_2: R0 \leftarrow R2$
 
 **具有并行载入功能的双向通用移位寄存器**
 
@@ -729,15 +753,18 @@ Three essential elements
 * 可双向移位
 * 可改变移位值(科学的说法是串行输入)
 
-**行波计数器(Ripple Counter)**
+**行波计数器(Ripple Counter)-->这是异步的吧**
 
 不等于串行计数器
 
 * 实现
   * 除了第一个以外的触发器的C端口与上一个的输出端口Qn相连
+  * 每个D触发器的D端口都与自己的Qn相连
   * 每当Q~(i)~从1到0跳转，C~(i+1)~=Q~n(i)~从0到1跳转，引起Q~(i+1)~取反的翻转
 * 缺点
   * 异步电路，时延大，不稳定
+
+<img src="数逻笔记.assets/image-20200106225817939.png" alt="image-20200106225817939" style="zoom:25%;" />
 
 **同步计数器(Synchronous Counters)**
 
@@ -772,7 +799,7 @@ Three essential elements
 
 ==上一个的CO(Carry Output)连到下一个的Count==
 
-### modulo n计数器
+## modulo n计数器
 
 * Count is remainder of division by n; n may not be a power of 2
 * Count is arbitrary sequence of n states specifically designed state-by-state(不一定要从0到n-1，只要有n个states并且规定好即可)
@@ -815,7 +842,7 @@ The following **techniques** use an n-bit binary counter with asynchronous or sy
 1. 对于一个模3计数器，用第一种方法，则状态是：$0\xrightarrow{clk}1\xrightarrow{clk}2\xrightarrow{clk}3\xrightarrow{t \ll clk}0\xrightarrow{clk}...$ 强烈建议：**DON’T DO THIS!** 由于是异步清零，可能N存在的时间不够长，导致清零只清了一半
 2. 对于一个模7计数器，用第三种方法，则可以让`Load=Q2*Q1` (Q2\*Q1\*Q0来不及出现所以不用写成minimun)，然后
 
-### 寄存器单元(reg cell)设计
+## 寄存器单元(reg cell)设计
 
 将1位的迭代组合电路和一个触发器连接起来就构成了一个具有两个状态的时序电路，称之为寄存器单元；将一个RegCell复制n份组合在一起，就可以构成一个n位寄存器
 
@@ -864,9 +891,9 @@ Di = CX\*Bi + CY\*\~Ai\*Bi + Ai\*\~Bi + \~CY\*Ai = CX\*Bi + Ai \^ (CY \* Bi)
 
 Ai+Bi的微操作是((Ai\^Bi)\^Ci); C~i+1~ = (Ai\^Bi)*Ci + AiBi
 
-### 基于muxer和bus的多寄存器传输(Multiple registers transfers)
+## 基于muxer和bus的多寄存器传输(Multiple registers transfers)
 
-#### 两种实现方式：
+### 两种实现方式：
 
 以三位双路选择为例
 
@@ -906,7 +933,7 @@ MUX --BUS'_1--> Reg1
 MUX --BUS'_2--> Reg2
 ```
 
-#### 三态总线
+### 三态总线
 
 Hi-Z输出性质
 * Hi-Z输出可以互联，但不能同一时刻输出高低的互联
@@ -920,7 +947,7 @@ EN=0输出Hi-Z，EN为1正常
 
 (a)：三态缓冲器开启(EN=1)，作为输出；三态缓冲器关闭(EN=0)，作为输入
 
-### 串行传输及其微操作
+## 串行传输及其微操作
 
 与并行的不同：由于只有一个串行输入端和串行输出端，因此寄存器中的值不能任意改变
 
@@ -933,7 +960,7 @@ EN=0输出Hi-Z，EN为1正常
 
 <img src="数逻笔记.assets/image-20191215115541386.png" alt="image-20191215115541386" style="zoom:25%;" />
 
-## Ch7
+# Ch7
 
 字是计算机一次处理数据的最大单位。
 
@@ -961,7 +988,7 @@ SRAM与DRAM优点对比
   * 功耗低
   * 容量大
 
-### SRAM
+## SRAM
 
 **Coincident Selection**
 
@@ -983,7 +1010,7 @@ SRAM与DRAM优点对比
 * 地址线不变
 * 数据总线每一section对于原RAM
 
-### DRAM
+## DRAM
 
 DRAM的位片结构与包含刷新逻辑的DRAM框图
 
