--- a/Assembly/19-11-27.md
+++ b/Assembly/19-11-27.md
@@ -16,9 +16,17 @@
 
 ### xchg
 
+同样不能两个操作数都是变量
+
 ```assembly
 xchg ax,bx
 xchg ax,ds[bx]
+```
+
+```assembly
+mov ax, 1
+mov bx, 2
+xchg ax, bx; 则ax=2, bx=1
 ```
 
 
