--- a/Assembly/19-12-04.md
+++ b/Assembly/19-12-04.md
@@ -141,6 +141,28 @@ end main
 
 
 
+  在汇编中XLAT指令的作用就是在bx保存array的首地址，AL保存array的位置的基础上，执行XLAT指令，将返回值送入AL指令中.
+
+  指令如下指令后AL=5
+
+  
+
+```assembly
+	array  db  3，5，8，2，4，7，9，6，10，33
+data ends
+code segment
+	lea bx,array
+	mov al,1
+	xlat        ;返回值AL=array[AL]
+```
+————————————————
+版权声明：本文为CSDN博主「cysisu」的原创文章，遵循 CC 4.0 BY-SA 版权协议，转载请附上原文出处链接及本声明。
+原文链接：https://blog.csdn.net/cysisu/article/details/78630179
+
+
+
+
+
 ### inc
 
 <u>inc不影响CF位, add指令会影响CF:</u>
