--- a/GP/普物2重要公式.md
+++ b/GP/普物2重要公式.md
@@ -81,10 +81,13 @@ $$
 $$
 i = nqAv_d; j = nqv_d
 \\
+\vec j = \sigma \vec E
+\\
 \sum \Delta V_i = 0
 \\
 q_充(t) = C\varepsilon(1-e^{-\frac t \tau})
 \\
+\tau = RC = L/R
 $$
 
 位移电流：$i_d = \frac{dD}{do}$
@@ -162,9 +165,9 @@ $$
 | D=ε~0~E~0~ <br />E=E~0~-E' <br />P=ε~0~E'                    | H <br />B <br />M                                            |
 | $\vec P = \chi_e \varepsilon_0 \vec E$<br />$\vec D = (\kappa_e \varepsilon_0) \vec E$ | $\vec M = \chi_m \vec H$<br />$\vec B = (\mu_r\mu_0) \vec H$ |
 | $\mathop\oint_s\vec P \cdot d \vec A = - \sum_{(ins)}q'_i$   | $\mathop\oint_s\vec M \cdot d \vec l = \sum_{(ins)}i_m$      |
-| $\vec D = \varepsilon_0 \vec E + \vec P= \varepsilon_0 \vec E_0$ | $\vec H = \frac{\vec B}{\mu_0} - \vec M$                     |
+| $\vec D = \varepsilon_0 \vec E + \vec P \xlongequal{Vacumn} \varepsilon_0 \vec E_0$ | $\vec H = \frac{\vec B}{\mu_0} - \vec M$                     |
 | $\oint \vec D \cdot d \vec A = \sum_{ins}q_0$                | $\oint \vec H \cdot d \vec l = \sum_{ins}i_0$                |
-| \sigma = \vec p \cdot \vec n                                 | \vec j = \vec M \times \vec n                                |
+| $\sigma' = \vec P \cdot \vec n$                              | $\vec j = \vec M \times \vec n$                              |
 
 ###### 电磁波
 
@@ -280,3 +283,4 @@ $\begin{array}{ll}r_n = n^2\frac{\varepsilon_0 h^2}{\pi me^2} & n=1,2,3,...\end{
 
 
 $E_n = -\frac{1}{n^2}(\frac{me^4}{8\varepsilon_0^2h^2})\ n = 1,2,3,...$，将这些分立的<u>能量值</u>称为**能级**。特殊地，氢原子$E_1 = -13.6eV$
+
