--- a/GP/普物2笔记_电磁.md
+++ b/GP/普物2笔记_电磁.md
@@ -35,7 +35,7 @@ $U = W_{+q\rightarrow\infty}+W_{-q\rightarrow\infty} = qU_+ +(-q)U_- = q(U_+-U_-
 
 
 - 无限大带电平面：$E={\frac{\sigma}{2\varepsilon_0}}$
-- 有限长带电棒任意点：$\left\{\begin{array}{l}	E_x = \frac{\lambda}{4\pi\varepsilon_0z}(sin\theta_2-sin\theta_1)\\E_y = \frac{\lambda}{4\pi\varepsilon_0z}(cos\theta_1-cos\theta_2)	\end{array}\right.$(大物P17，挺好算的)
+- 有限长带电棒任意点：$\left\{\begin{array}{l}	E_x = \frac{\lambda}{4\pi\varepsilon_0z}(\sin\theta_2-\sin\theta_1)\\E_y = \frac{\lambda}{4\pi\varepsilon_0z}(cos\theta_1-cos\theta_2)	\end{array}\right.$(大物P17，挺好算的)
 
   - 有限长带电棒中点：$E = \frac{Q}{4\pi\varepsilon_0}\frac{1}{z\sqrt{(\frac L 2)^2+z^2}}$
   - 无限长带电棒：$E={\frac{\lambda}{2\pi\varepsilon_0r}}$
@@ -51,7 +51,7 @@ $U = W_{+q\rightarrow\infty}+W_{-q\rightarrow\infty} = qU_+ +(-q)U_- = q(U_+-U_-
 
 #### 立体角
 
-$d\Omega = sin\theta d\theta d\varphi$
+$d\Omega = \sin\theta d\theta d\varphi$
 
 以观测点为球心，构造一个单位球面；任意物体投影到该单位球面上的投影面积，即为该物体相对于该观测点的立体角。因此，<u>立体角是单位球面上的一块面积，这和“平面角是单位圆上的一段弧长”类似</u>。
 
@@ -132,7 +132,7 @@ curlf=\nabla\times f=
 	(\frac{\partial y}{\partial x}-\frac{\partial x}{\partial y})\hat k\\
 $$
 
-旋度与第二类曲线积分的路径无关性有联系，其运算结果与 路径无关四个等价条件 的$$可互推。
+注：旋度与**第二类曲线积分**的**路径无关性**有联系，其运算结果与 路径无关四个等价条件 的$$可互推。
 
 ##### Ex. 场
 
@@ -142,8 +142,10 @@ $$
 #### 电势
 
 $$
-从点电荷出发，V_i(r_i)=\int_r^\infty\frac{q_i}{4\pi\varepsilon_0{r_i}^2}dr=\frac{q_i}{4\pi\varepsilon_0r_i}，因此V=\Sigma V_i(r_i)=\frac 1{4\pi\varepsilon_0}\Sigma\frac{q_i}{r_i}；\\
-从电场出发，V=\int_r^\infty \vec E\cdot d\vec l\\
+\begin{cases}
+从点电荷出发，&V_i(r_i)=\int_r^\infty\frac{q_i}{4\pi\varepsilon_0{r_i}^2}dr=\frac{q_i}{4\pi\varepsilon_0r_i}，因此V=\Sigma V_i(r_i)=\frac 1{4\pi\varepsilon_0}\Sigma\frac{q_i}{r_i}；\\
+从电场出发，&V=\int_r^\infty \vec E\cdot d\vec l\\
+\end{cases}
 $$
 
 #### 电势差
@@ -192,15 +194,14 @@ U =
 = \frac{Q^2}{8 \pi \varepsilon_0 R}
 $$
 
-*第三种算法中$C = 4\pi \varepsilon_0 (\frac{\infty R}{\infty - R})$。因为仅球壳外表面(外侧)带电，因此可视作由外表面到无穷远的电容器，也可算$V = \frac{Q}{4 \pi \varepsilon_0 R}, C = \frac Q V$。*
+注：*第三种算法中$C = 4\pi \varepsilon_0 (\frac{\infty R}{\infty - R})$。(因为仅球壳外表面(外侧)带电，因此可视作由外表面到无穷远的电容器，也可算$V = \frac{Q}{4 \pi \varepsilon_0 R}, C = \frac Q V$)。*
 
 ### Ch25 Conductors
 
 #### 等势体
 
-**Ex**.
+**Ex**. 两个相距无限远的导电圆球，总电量为Q，用导线将两者表面相连，求电荷分布
 $$
-两个相距无限远的导电圆球，总电量为Q，用导线将两者表面相连，求电荷分布\\
 \frac{q_1}{4\pi\varepsilon_0R_1}=\frac{q_2}{4\pi\varepsilon_0R_2}\\
 \Longrightarrow \frac {q_1} {q_2}= \frac {R_1} {R_2}
 $$
@@ -242,7 +243,7 @@ $$
 
 **单个平行板电容器，仅在向对面有电荷，外面不带电荷**
 
-==注意，平行板电容器的电场是$\frac \sigma {\varepsilon_0}$。因为两板都有电荷，因此高斯定律得分成两部分计算==
+==注意，平行板电容器的电场是$\frac \sigma {\varepsilon_0}$。因为两板都有电荷且电场只有单侧，因此高斯定律得分成两部分计算==
 
 #### 串并联
 
@@ -294,9 +295,10 @@ $$
 
 ### Ch26-2 Dielectrics
 
-Q一定时，X表示插入电介质后的量值，X~0~表示真空时的量值
-
 ==不要忘了最基本的这几个==
+
+Q一定时，X表示插入电介质后的参量值，X~0~表示真空时的量值
+
 $$
 \left \{ \begin{array}{l}
 	C=\kappa_eC_0\\
@@ -339,6 +341,8 @@ dQ'=qdN'
 \therefore \sigma' = \frac {dQ'}{dA}=Pcos\theta =\vec P \cdot \vec n = P_{\vec n}\\
 $$
 
+==$\vec P$定义为与$\vec E$同向==
+
 (可使用斜圆柱模型推导，大物P71)
 
 **一个重要结论**
@@ -373,13 +377,13 @@ $\vec D = \varepsilon_0 \vec E + \vec P\\ = \varepsilon_0 \vec E + \chi_e \varep
 **CXY猜想**：
 $$
 \left \{ \begin{array}{l}
-	D = \varepsilon E
+	D = \kappa_e\varepsilon_0 E
 	\\
 	P = \chi_E\varepsilon_0E
 \end{array} \right.
 \Longrightarrow
 \left \{ \begin{array}{l}
-	D \sim E
+	D \sim E_0?
 	\\
 	P \sim E_0-E
 \end{array} \right.
@@ -397,7 +401,7 @@ $\oint \vec D \cdot d \vec A= \Sigma_{i}q_0$(介质中的高斯定理)
 
 **介质中的高斯定理的Proof**:
 
-在某电介质中，有带电+Q_0的球，
+在某电介质空穴中，有带电+Q_0的球，
 
 $$
 \oint \vec P \cdot d \vec A = - \sum_{ins} q'
@@ -457,7 +461,9 @@ $$
 
 Electric Density (电流密度)
 $$
-j = \frac {di}{dS_{\bot}} = \frac {dq}{dtdS_\bot} 
+j = \frac {di}{dS_{\bot}} = \frac {dq}{dtdS_\bot}
+\\
+\vec j = \sigma \vec E
 $$
 Drift Velocity $v_d$ (漂移速度)
 
@@ -485,7 +491,7 @@ $\varepsilon_1=10V,\varepsilon_2=5V,R_1=R_2=R_3=4\Omega$
 
 <img src="普物2笔记.assets/image-20191107184215773.png" alt="image-20191107184215773" style="zoom: 50%;" />
 $$
-假设i_1向右，i_2向右，i_3向下
+Assume:i_1\rightarrow;i_2\rightarrow;i_3\downarrow
 \\
 \left \{ \begin{array}{l}
 	i_1 = i_2 + i_3\\
@@ -522,7 +528,7 @@ $$
 ##### 放电
 
 $$
-q = q_0 e^\frac t \tau
+q = q_0 e^ {-\frac t \tau}
 \\
 i = \frac \varepsilon Re^{-\frac t \tau}
 $$
@@ -556,11 +562,11 @@ $$
 
 <img src="普物2笔记.assets/image-20191027104948806.png" alt="image-20191027104948806" style="zoom: 50%;" />
 $$
-F_\tau = N i a B sin\theta
+F_\tau = N i a B \sin\theta
 \\
-\tau = 2 F_\tau \frac b 2 =NiabBsin\theta = NiABsin\theta(\theta = <\vec n, \vec B>)
+\tau = 2 F_\tau \frac b 2 =NiabB\sin\theta = NiAB\sin\theta(\theta = <\vec n, \vec B>)
 \\
-= (NiSB)sin\theta 
+= (NiSB)\sin\theta 
 \\
 \vec \tau \parallel \hat n \times \vec B
 $$
@@ -594,7 +600,7 @@ $$
 
 #### Biot-Savart
 
-$dB = \frac{\mu_0}{4\pi} \frac{i\ dl\ sin\theta}{r^2}	\\	d\vec B = \frac{\mu_0}{4\pi} \frac{i\ d\vec l \times \hat r}{r^2} = \frac{\mu_0}{4\pi} \frac{i\ d\vec l \times \vec r}{r^3}{}$
+$dB = \frac{\mu_0}{4\pi} \frac{i\sin\theta}{r^2}dl	\\	d\vec B = \frac{\mu_0}{4\pi} \frac{i\ d\vec l \times \hat r}{r^2} = \frac{\mu_0}{4\pi} \frac{i\ d\vec l \times \vec r}{r^3}{}$
 
 $\vec r$：电流微元所在点到目标点(求B处)的位移矢量
 
@@ -602,18 +608,18 @@ $\vec r$：电流微元所在点到目标点(求B处)的位移矢量
 
 ##### Conclusion
 
-\# THIS IS SCRIPT CALING THE MAGF OF STRAIGHT WIRE
+\# THIS IS MSCRIPT CALING THE MAGF OF STRAIGHT WIRE
 
 $$
-sin\theta = \frac R {\sqrt{R^2+L^2}}
+\sin\theta = \frac R {\sqrt{R^2+L^2}}
 \\
 dB= A \frac{iRdl}{(R^2+L^2)^\frac 3 2}
 \\
 B = \int_a^b dB= \frac{i\mu_0R}{4\pi} \int_a^b \frac{dl}{(R^2+L^2)^\frac 3 2}
 \\
-(\int \frac{dl}{(R^2+L^2)^\frac 3 2} (L \triangleq \frac{Rsin\theta}{cos\theta})
-= \int \frac{\frac{1}{cos^2\theta}Rd\theta}{R^3\frac 1 {cos^3\theta}}
-=\frac 1 {R^2} \int cos\theta d\theta = \frac{sin(atan(\frac L R))}{R^2}+C = \frac{L}{R^2\sqrt{R^2+L^2}}+C)
+(\int \frac{dl}{(R^2+L^2)^\frac 3 2} (L \triangleq \frac{R\sin\theta}{\cos\theta})
+= \int \frac{\frac{1}{\cos^2\theta}Rd\theta}{R^3\frac 1 {\cos^3\theta}}
+=\frac 1 {R^2} \int \cos\theta d\theta = \frac{\sin(\arctan(\frac L R))}{R^2}+C = \frac{L}{R^2\sqrt{R^2+L^2}}+C)
 \\
 \therefore B = \frac{\mu_0i}{4\pi R} (\frac L {\sqrt{R^2+L^2}})|_{L=a}^{b}
 $$
@@ -633,8 +639,8 @@ $$
 
 $$
 螺线管coil：dB = \frac{(ndl)\mu_0iR^2}{2(l^2+R^2)^\frac 3 2}\\
-(\frac{R/sin\beta}{dl} = sin\beta)\\
-= \frac{\mu_0i(2\pi n)}{4\pi } (cos\beta_2 - cos\beta_1)[= (sin(\frac \pi 2-\beta_2) + sin(\beta_1 - \frac \pi 2))]\\
+(\frac{R/\sin\beta}{dl} = \sin\beta)\\
+= \frac{\mu_0i(2\pi n)}{4\pi } (cos\beta_2 - cos\beta_1)[= (\sin(\frac \pi 2-\beta_2) + \sin(\beta_1 - \frac \pi 2))]\\
 特殊的，当coil\ length \rightarrow \infty，有
 \left \{ \begin{array}{}
 	B_内 = n\mu_0i\\
@@ -654,7 +660,7 @@ $$
 
 #### 粒子生磁
 
-$d\vec B = \frac{\mu_0}{4\pi} \frac{i\ d\vec s \times \hat r}{r^2} = \frac{\mu_0}{4\pi} \frac{i\ d\vec s \times \vec r}{r^3}, i = \frac{dq}{dt} \Longrightarrow id\vec s = \vec vdq,$ when there is only one particle carrying a single charge, $dq = q, d\vec B = \frac{\mu_0}{4\pi} \frac{dq\ \vec v \times \hat r}{r^2}{}$
+~~\$d\vec B = \frac{\mu_0}{4\pi} \frac{i\ d\vec l \times \hat r}{r^2} = \frac{\mu_0}{4\pi} \frac{i\ d\vec l \times \vec r}{r^3}, i = \frac{dq}{dt} \Longrightarrow id\vec s = \vec vdq,\$ when there is only one particle carrying a single charge, \$dq = q, d\vec B = \frac{\mu_0}{4\pi} \frac{dq\ \vec v \times \hat r}{r^2}{}\$~~
 
 $\therefore \vec B = \frac{\mu_0}{4\pi} \frac{q\ \vec v \times \hat r}{r^2}{}$
 
@@ -703,7 +709,7 @@ $$
 
   $L = \frac{N\int_a^b(\frac{\mu_0iN}{2\pi r})(hdr)}{i} = \frac{\mu_0 N^2 h}{2\pi}ln\frac b a$
 
-#### 感应电动势
+#### 感应电动势 & 自感系数
 
 $$
 L = \frac{N\Phi_B}{i}，单位为H
@@ -714,15 +720,14 @@ $$
 ##### 感生电动势
 
 $$
-\varepsilon = -\int \frac{\partial \vec B}{\partial t} \cdot d\vec A
+\varepsilon= \frac{dB}{dt}A = -\int \frac{\partial \vec B}{\partial t} \cdot d\vec A
 \\
-= \frac{dB}{dt}A/\frac{dA}{dt}B
 $$
 
 ##### 动生电动势
 
 $$
-\varepsilon = \int (\vec v \times \vec B) \cdot d \vec l
+\varepsilon= \frac{dA}{dt}B = \int (\vec v \times \vec B) \cdot d \vec l
 \\
 = \vec l \cdot \vec v \times \vec B
 $$
@@ -751,7 +756,7 @@ Ex.
 $$
 \varepsilon - iR - L\frac{di}{dt} = 0
 $$
-此外，到$tau$时的电流还是0.63i和0.37i ($1-\frac1e$与$\frac1e$)
+此外，到$\tau$时的电流还是0.63i和0.37i ($1-\frac1e$与$\frac1e$)
 
 #### 磁场能量
 
@@ -787,7 +792,7 @@ $\large\frac q C = \varepsilon_L = -L\frac{di}{dt} = -L\frac{d\frac{dq}{dt}}{dt}
 
 获得二阶微分方程：$\large\frac{d^2q}{dt^2} + \frac{q}{\omega^2} = 0,\omega = \frac1{\sqrt{LC}} $
 
-解得$\left \{ \begin{array}{}	U_E = \frac{q_0^2}{2C}cos^2(\omega t + \varphi) \\ U_B = \frac{Lq_0^2\omega^2}{2}sin^2(\omega t + \varphi) \end{array}\right.$
+解得$\left \{ \begin{array}{}	U_E = \frac{q_0^2}{2C}cos^2(\omega t + \varphi) \\ U_B = \frac{Lq_0^2\omega^2}{2}\sin^2(\omega t + \varphi) \end{array}\right.$
 
 显然有：$\large U_E+U_B = \frac{q_0^2}{C} = Lq_0^2\omega^2$
 
@@ -833,15 +838,13 @@ $\large\frac q C = \varepsilon_L = -L\frac{di}{dt} = -L\frac{d\frac{dq}{dt}}{dt}
 
 故有：$j_d = \frac{dD}{dt}	\\	i_d = \frac{d\Phi_D}{dt} = \varepsilon_0 \frac{d\Phi_E}{dt}$
 
-==注意，真空中$\vec P = 0$，因此有$\vec E = \vec E_0$与$\vec D = \varepsilon_0 \vec E$==
+==注意，真空介质中$\vec P = 0$，因此有$\vec E = \vec E_0$与$\vec D = \varepsilon_0 \vec E$==
 
 ##### 位移电流密度
 
 $j_d = \frac{\partial \vec D}{\partial t} = \varepsilon_0\frac{\partial \vec E}{\partial t} + \frac{\partial \vec P}{\partial t}$
 
-##### 全电流
-
-全电流安培环路定理
+##### 全电流安培环路定理
 
 $$
 \mathop\oint_L \vec B \cdot d\vec l
@@ -903,7 +906,7 @@ $c^2 = \frac{1}{\varepsilon_0\mu_0}$
 
 这个偏微分方程的形式与电位移，磁场强度也有关系。此处仅与电场强度和磁感应强度有关的是导出式
 
-$\frac{\partial \vec E}{\partial z} = - \frac{\partial \vec B}{\partial t} \xrightarrow{变化的磁场产生电场} kE_msin(kz-ωt) = \omega B_msin(kz-ωt) \\ \Longrightarrow \frac E B = \frac{E_m}{B_m} = \frac\omega k = c$
+$\frac{\partial \vec E}{\partial z} = - \frac{\partial \vec B}{\partial t} \xrightarrow{变化的磁场产生电场} kE_m\sin(kz-ωt) = \omega B_m\sin(kz-ωt) \\ \Longrightarrow \frac E B = \frac{E_m}{B_m} = \frac\omega k = c$
 
 #### Poynting Vector & Intensity
 
@@ -919,21 +922,25 @@ $P = \overline S = S_{avg}$
 
 利用公式$c^2 = \frac{1}{\varepsilon_0\mu_0}$与$\frac E B = c$
 
-$\vec S = \frac{\vec E \times \vec B}{\mu_0} =$
+$\vec S = \frac{\vec E \times \vec B}{\mu_0} = \frac{E^2}{\mu_0c} = \frac{cB^2}{\mu_0} \xlongequal{c^2 = \frac{1}{\mu_0\varepsilon_0}}\sqrt{\frac{\varepsilon_0}{\mu_0}}E^2$
+
+**强度**：$I = \overline S = 1/2 S_{\max}$(一阶均值)
+
+**能量**：$u = u_E + u_B$
 
 ### Ch32 Alternating Field and Current
 
 #### 三种负载
 
 * Resistance
-  * $\Delta V_R = i_mRsin(\omega t - \phi)$
+  * $\Delta V_R = i_mR\sin(\omega t - \phi)$
   * 同相位
 * Inductor
-  * $\Delta V_L = L\frac{di}{dt} = L\omega i_m sin(\omega t - \phi + \frac\pi 2)$
+  * $\Delta V_L = L\frac{di}{dt} = L\omega i_m \sin(\omega t - \phi + \frac\pi 2)$
   * 滞后
   * $X_L = \omega L$
 * Capacitor
-  * $\Delta V_C = \frac{q}{C} = \frac{i_m}{\omega C}sin(\omega t - \phi - \frac\pi 2)$
+  * $\Delta V_C = \frac{q}{C} = \frac{i_m}{\omega C}\sin(\omega t - \phi - \frac\pi 2)$
   * 提前
   * $X_C = \frac{1}{\omega C}$
 
@@ -955,9 +962,9 @@ $P_{av} = i_{rms}^2 R$
 
 **Power of EMF**
 
-$P_{av} = \frac{\varepsilon_mi_mcos\phi}2$
+$P_{av} = \frac{\varepsilon_mi_m\cos\phi}2$
 
-功率因子：$cos\phi = \frac{R}{\sqrt{R^2 + (X_L - X_C)^2}}$
+功率因子：$\cos\phi = \frac{R}{\sqrt{R^2 + (X_L - X_C)^2}}$
 
 #### Transformer变压器
 
