--- a/马原.md
+++ b/马原.md
@@ -21,7 +21,7 @@
 
 **可知不可知**：思维是否能正确认识存在(存在和思维有没有同一性)；世上只有尚未认识之物，没有不可认识之物
 
-**辩证与形而上学**：$\begin{cases} 用联系的、发展的、全面的观点看问题，事物发展的根本原因是食物的内部矛盾 \\ 静止的片面的观点看文题，否认食物内部矛盾的存在和作用 \end{cases}$
+**辩证法与形而上学**：$\begin{cases} 用联系的、发展的、全面的观点看问题，事物发展的根本原因是事物的内部矛盾 \\ 静止的片面的观点看文题，否认事物内部矛盾的存在和作用 \end{cases}$
 
 
 
@@ -95,6 +95,8 @@
 
 ## 社会
 
+### 社会矛盾
+
 **唯物史观与唯心史观**：社会意识与社会存在关系
 
 
@@ -123,9 +125,96 @@
 
 **经济基础与上层建筑**
 
-* 经济基础决定上层建筑，上层建筑对经济基础具有反作用 (为自己的经济基础的形成和巩固服务，确立或维护其在社会中的统治地位)
-* $上层建筑\begin{cases} 观念上层建筑： & 意识形态 \\ 政治上层建筑： & 政治法律制度及设施、政治组织 \end{cases}$
+* 经济基础：社会一定发展阶段的生产力所决定的生产关系的总和
+* 上层建筑：建立在一定经济基础上的意识形态以及相应的制度、组织和设施
+  * 分类：$\begin{cases} 观念上层建筑： & 意识形态 \\ 政治上层建筑： & 政治法律制度及设施、政治组织 \end{cases}$
   * 整个上层建筑中，政治上层建筑居主导地位，国家政权是核心
+* **辩证统一**：经济基础决定上层建筑，上层建筑对经济基础具有反作用 (为自己的经济基础的形成和巩固服务，确立或维护其在社会中的统治地位)
+
+
+
+**社会更替**
+
+
+
+### 社会历史发展的动力
+
+**社会基本矛盾**
+
+* 社会发展<u>根本动力</u>
+* 包括：生产力和生产关系、经济基础和上层建筑的矛盾
+* 社会**主要**矛盾：社会基本矛盾(其他一切社会矛盾的根源)的具体体现
+
+
+
+**阶级斗争和社会革命**
+
+* 阶级斗争是社会基本矛盾在阶级社会中的表现(根源)；阶级斗争是**阶级对立**社会发展的直接动力(作用)
+* 发展到一定阶段
+  * 阶级是一个**经济**范畴，也是一个**历史**范畴
+  * 阶级斗争是**阶级利益**根本冲突的**对抗阶级**之间的对立和斗争
+  * 阶级斗争根源于阶级之间**物质利益**的根本对立，根源于社会经济关系的冲突
+  * 一切阶级斗争，都是围绕着**经济利益**这个轴心展开的
+* 阶级斗争是阶级社会发展的**直接动力**
+  * 在阶级社会中，生产力和生产关系、经济基础和上层建筑的矛盾发展到一定程度时，必然会通过 阶级斗争表现出来
+  * 对社会发展的推动作用突出地表现在社会形态的更替中(生产关系变革)
+  * 受到历史条件的制约(革命性和进步性有限)
+
+
+
+**改革**
+
+* 是**同一种**社会形态发展过程中的**量变和部分质变**，是**推动社会发展**的又一重要动力
+* **重要作用**：它是在一定程度上解决社会基本矛盾、促进生产力发展、推动社会进步的有效途径和手段
+* 革命/社会革命：深层次的、全局性的改革
+* 社会主义社会也需要经常进行改革：
+  * 中国的社会主义改革
+    * 社会主义制度的自我完善和自我发展
+    * 是党领导人民进行伟大社会革命的成果
+
+
+
+**科学技术**
+
+* 推动经济和社会发展的强大杠杆
+  * 每一次科学技术革命，都不同程度地引起<u>生产方式、生活方式和思维方式</u>的深刻变化和社会的巨 大进步
+
+
+
+### 人民群众
+
+**创造历史过程中的决定作用**
+
+* 群众史观(唯物)与英雄史观(唯心，剥削阶级维护利益)
+
+* 人民群众是社会历史的主体，是历史的创造者
+  1. 人民群众是社会物质财富的创造者
+  2. 人民群众是社会精神财富的创造者
+  3. 人民群众是社会变革的决定力量
+
+
+
+**无产阶级政党的群众路线**
+
+* **群众观点**和**群众路线**的理论基础：唯物史观关于人民群众是历史创造者的原理
+  * 马克思主义群众观点
+    * 坚信人民群众自己解放自己
+    * 全心全意为人民服务
+    * 一切向人民群众负责
+    * 虚心向群众学习
+  * 党的群众路线
+    * 一切为了群众，一切依靠群众，从群众中来，到群众中去的路线
+    * 党的生命线和根本工作路线
+
+
+
+**个人的作用**
+
+* 杰出人物有时有深刻影响或影响个别历史事件的结局
+* 都必然受社会客观规律的制约，而不能决定和改变历史发展的总进程和总方向
+* 辩证理解
+
+
 
 
 
@@ -134,3 +223,4 @@
 # Appendix
 
 国家垄断资本主义的基础是凯恩斯的《就业、利息和货币通论》
+
