--- a/LCDF/数逻注意事项.md
+++ b/LCDF/数逻注意事项.md
@@ -36,3 +36,11 @@ r's complement: (2^n^-1) - N + 1 = 2^n^ - N
 
 ---
 
+Cannonical与Standard的区别？？明天问一下
+
+~~(SOP与POS就是指的sum of mint 和 prod of maxt)(课件里并不是，Chap02.104)~~
+
+https://www.geeksforgeeks.org/canonical-and-standard-form/
+
+---
+
