--- a/Assembly/19-12-18.md
+++ b/Assembly/19-12-18.md
@@ -6,6 +6,38 @@ Q: 为什么第三次作业用600h不行：==小端规则啊==
 
 ## 字符串操作
 
+| 指令      | Description                                                  |
+| --------- | ------------------------------------------------------------ |
+| scasb     | repne 找与AL相同，repe找与AL不同，重复CX次                   |
+| rep movsb | ①ds:si指向源字符串(si就是source index)<br/>②es:di指向目标字符串(di就是destination index)<br/>③cx=移动次数<br/>④DF=0即方向标志设成正方向(用指令cld) |
+| lodsb     | AL=DS:[SI]<br/>SI++;当DF=1时, 为SI--                         |
+| stosb     | es:[di] = AL<br/>di++; DF=1时为di--                          |
+| rep stosb | 把es:di的指向的CX个用AL内容换掉                              |
+
+```assembly
+repne scasb:
+next:
+  if(cx == 0) goto done;
+  cmp al, es:[di]
+      di++; 当DF=1时，为di--
+      cx--
+  je done
+  goto next
+done:
+```
+
+```assembly
+again:
+	if(cx == 0) goto done;
+	ES:[DI] = AL
+	DI++; 当DF=1时, 为DI--
+	CX--
+	goto again;
+done:
+```
+
+---
+
 ### (rep) movsb(sw,sd)
 
 在执行此指令前要做以下准备工作：
