--- a/Assembly/_汇编总结.md
+++ b/Assembly/_汇编总结.md
@@ -16,7 +16,7 @@
 
 ---
 
-源程序中的[ads]不表示(DS:[ads])，会被masm当做数值ads处理
+源程序中的[ads]不表示(DS:[ads])，会被masm当做数值处理
 
 <img src="Sep25.assets/image-20191007101944690.png" alt="image-20191007101944690" style="zoom:50%;" /> $\Longrightarrow$ <img src="Sep25.assets/image-20191007102016154.png" alt="image-20191007102016154" style="zoom:50%;" />
 
@@ -33,7 +33,7 @@
 
 ---
 
-$\begin{cases} push: & sp-=2 \\ pop: & sp += 2 \end{cases}$
+$\begin{cases} \rm push: & \rm sp-=2 \\ \rm pop: & \rm sp += 2 \end{cases}$
 
 ---
 
@@ -194,6 +194,8 @@ sh若移动位数超过1位则必须将移动位数存在cl，`shl reg,cl`
 
 <img src="https://img-blog.csdn.net/20170505193752326?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvQXBvbGxvbl9rcmo=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast">
 
+<img src="https://img-blog.csdn.net/20180626155457820?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzM1ODIxOTg4/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70" alt="" style="zoom: 50%;" /><br /><img src="https://img-blog.csdn.net/20180626155536598?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzM1ODIxOTg4/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70" alt="" style="zoom:50%;" /><br /><img src="https://img-blog.csdn.net/20180626155556942?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzM1ODIxOTg4/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70" alt="" style="zoom:50%;" />
+
 ---
 
 [bx+si+2] [bx+di-2] [bp+si+1] [bp+di-1]
@@ -257,7 +259,7 @@ xlat        ;返回值AL=array[AL]
 
 **sal sar**(a是arithmetic)带符号左右移，其中sal和shl是一样的
 
-**rol, ror, rcl, rcr**(c表示carry)：$\begin{cases};ROL: 循环左移, 高位到低位并送 CF\\;ROR: 循环右移, 低位到高位并送 CF\\;RCL: 循环左移, 进位值(原CF)到低位, 高位进 CF\\;RCR: 循环右移, 进位值(原CF)到高位, 低位进 CF\end{cases}{}$
+**rol, ror, rcl, rcr**(c表示carry)：$\begin{cases};\rm ROL: 循环左移, 高位到低位并送 CF\\;\rm ROR: 循环右移, 低位到高位并送 CF\\;\rm RCL: 循环左移, 进位值(原CF)到低位, 高位进 CF\\;\rm RCR: 循环右移, 进位值(原CF)到高位, 低位进 CF\end{cases}{}$
 
 ---
 
@@ -282,7 +284,74 @@ main:
 
 ==[bp]默认段地址是ss，剩下三个都是ds==
 
-**栈底位置很大，进栈sp减小，出栈sp增大**
+**栈底位置很大(压入第一个之后sp从0000h变为0FFFEh)，进栈sp减小，出栈sp增大**
 
 ---
 
+**iret**(interrupt return)
+
+干的事情：`pop IP` $\longrightarrow$ `pop CS` $\longrightarrow$ `popf`
+
+---
+
+字符串操作
+
+| 指令      | Description                                                  |
+| --------- | ------------------------------------------------------------ |
+| scasb     | repne 找与AL相同，repe找与AL不同，重复CX次                   |
+| rep movsb | ①ds:si指向源字符串(si就是source index)<br/>②es:di指向目标字符串(di就是destination index)<br/>③cx=移动次数<br/>④DF=0即方向标志设成正方向(用指令cld) |
+| lodsb     | AL=DS:[SI]<br/>SI++;当DF=1时, 为SI--                         |
+| stosb     | es:[di] = AL<br/>di++; DF=1时为di--                          |
+| rep stosb | 把es:di的指向的CX个用AL内容换掉                              |
+
+详见 19-12-18笔记
+
+---
+
+ja, jb：CF ZF
+
+jae, jbe,(无符号数) 
+
+jg jl  jge  jle(有符号数)
+
+jc  jnc je   jne   jz  jnz jcxz(if cx == 0)
+
+js jns jo   jno
+
+https://www.tutorialspoint.com/assembly_programming/assembly_conditions.htm
+
+Following are the conditional jump instructions used on signed data used for **arithmetic operations** −
+
+| Instruction |             Description             | Flags tested |
+| :---------: | :---------------------------------: | :----------: |
+|    JE/JZ    |       Jump Equal or Jump Zero       |      ZF      |
+|   JNE/JNZ   |   Jump not Equal or Jump Not Zero   |      ZF      |
+|   JG/JNLE   | Jump Greater or Jump Not Less/Equal |  OF, SF, ZF  |
+|   JGE/JNL   | Jump Greater/Equal or Jump Not Less |    OF, SF    |
+|   JL/JNGE   | Jump Less or Jump Not Greater/Equal |    OF, SF    |
+|   JLE/JNG   | Jump Less/Equal or Jump Not Greater |  OF, SF, ZF  |
+
+Following are the conditional jump instructions used on unsigned data used for **logical operations** −
+
+| Instruction |            Description             | Flags tested |
+| :---------: | :--------------------------------: | :----------: |
+|    JE/JZ    |      Jump Equal or Jump Zero       |      ZF      |
+|   JNE/JNZ   |  Jump not Equal or Jump Not Zero   |      ZF      |
+|   JA/JNBE   | Jump Above or Jump Not Below/Equal |    CF, ZF    |
+|   JAE/JNB   | Jump Above/Equal or Jump Not Below |      CF      |
+|   JB/JNAE   | Jump Below or Jump Not Above/Equal |      CF      |
+|   JBE/JNA   | Jump Below/Equal or Jump Not Above |    AF, CF    |
+
+The following conditional jump instructions have special uses and **check the value of flags** −
+
+| Instruction |            Description            | Flags tested |
+| :---------: | :-------------------------------: | :----------: |
+|    JXCZ     |        Jump if CX is Zero         |     none     |
+|     JC      |           Jump If Carry           |      CF      |
+|     JNC     |         Jump If No Carry          |      CF      |
+|     JO      |         Jump If Overflow          |      OF      |
+|     JNO     |        Jump If No Overflow        |      OF      |
+|   JP/JPE    |  Jump Parity or Jump Parity Even  |      PF      |
+|   JNP/JPO   | Jump No Parity or Jump Parity Odd |      PF      |
+|     JS      |    Jump Sign (negative value)     |      SF      |
+|     JNS     |   Jump No Sign (positive value)   |      SF      |
