--- a/GP/普物2笔记_光量.md
+++ b/GP/普物2笔记_光量.md
@@ -18,6 +18,7 @@
 
 * $\displaystyle \frac{1}{v} + \frac{1}{u} = {\frac{1}{f}}$
 * 凹球面镜：$R = 2f$
+* 在要求像一样大的情况下一般是取：$u_1/v_1 = u_2/v_2$来保证放大率一样
 
 #### 折射
 
@@ -38,6 +39,7 @@
 
 * 单球面折射镜高斯公式：$\displaystyle \frac{n_2}{v} - \frac{n_1}{u} = {\frac{n_2-n_1}{R}}$
 * $\displaystyle \frac{1}{v} + \frac{1}{-u} = {\frac{1}{f}}$
+  * ==记忆法：代入过焦点平行的情况，凸正凹负==
 * 放大率：$\displaystyle m = \frac{h_1}{h_0} = {\frac{n_1v}{n_2u}}$
 * 磨镜者公式：$\displaystyle \frac{1}{f} = (\frac{n_2}{n_1}-1)(\frac{1}{R_1} - \frac{1}{R_2})$
 
@@ -74,12 +76,12 @@ ${\displaystyle\begin{cases} \lambda_n = \frac \lambda n \\ \varphi = \frac{2\pi
 
 * **极大**
   * $\delta = d\sin\theta = \pm k \lambda$
-  * $x = \pm \frac D d k\lambda$
+  * $y = \pm \frac D d k\lambda$
   * k = 0, 1, 2, ...
 * **极小**
-  * $\delta = d\sin\theta = \pm (2k-1) \frac \lambda 2$
-  * $x = \pm \frac D d (2k-1)\frac \lambda 2$
-  * k = 1, 2, 3, ...
+  * $\delta = d\sin\theta = \pm (2k+1) \frac \lambda 2$
+  * $y = \pm \frac D d (k+\frac12)\lambda$
+  * k = 0, 1, 2, ...
 
 **干涉条纹的强度分布**
 
@@ -95,7 +97,7 @@ ${\displaystyle\begin{cases} \lambda_n = \frac \lambda n \\ \varphi = \frac{2\pi
 
 **光强**
 
-$I = 4I_0\cos(\frac{\Delta\varphi}{2})$
+$I = 4I_0\cos(\frac{\Delta\varphi}{2})$ (两束光先x2，由于相干加强再x2)
 
 
 
@@ -115,7 +117,7 @@ $I = 4I_0\cos(\frac{\Delta\varphi}{2})$
 >
 >  ​	Proof: $\Delta\varphi = 2\pi(\frac{n_1r_1}{\lambda} - \frac{n_2r_2}{\lambda}) = \frac{2\pi}\lambda \Delta L$
 >
->  另外，==透镜会改变光线的传播方向，但并不会引起附加的光程差==
+>  另外，==透镜会改变光线的传播方向，但并不会引起附加的光程差(E.g. 点光源的辐射光束经透镜后光程差相同)==
 
 ##### 等倾(倾角i相同同种纹)干涉
 
@@ -123,11 +125,11 @@ $I = 4I_0\cos(\frac{\Delta\varphi}{2})$
 
 同一束光经过薄膜后的光程差：$\Delta L = \delta = 2n_2\frac{e}{\cos r} - (2n_1 e \tan r \sin i - \frac \lambda 2) \\ = 2n_2e\cos r + \frac\lambda2 \\ = 2e\sqrt{n_2^2 - n_1^2 \sin^2i} + \frac\lambda2$，其中仅**i为变量**
 
-**干涉条件(反射)，i为变量**
+**干涉条件(反射)，i为变量，e为厚度**
 
 $2e\sqrt{n_2^2 - n_1^2 \sin^2i} + \frac\lambda2 = \left \{ \begin{array}{cc} k\lambda,(k = 1,2,3,...) & \Longrightarrow 明纹 \\ (2k-1)\frac\lambda2,(k=1,2,3,...) & \Longrightarrow 暗纹 \end{array}\right.$
 
-**干涉条件(透射)，i为变量**	
+**干涉条件(透射)，i为变量**
 
 (没有在外表面反射因此没有半波损失)
 
@@ -137,7 +139,7 @@ $2e\sqrt{n_2^2 - n_1^2 \sin^2i} = \left \{ \begin{array}{cc} k\lambda,(k = 1,2,3
 
 ##### 等厚(厚度相同同种纹)干涉(劈尖膜)
 
-当用平行单色光垂直照射薄膜时，$i\rightarrow 0$，因此$\delta = 2n_2e + \frac\lambda2 \triangleq 2ne + \frac\lambda2$
+当用平行单色光**垂直**照射薄膜时，$i\rightarrow 0$，因此$\delta = 2n_2e + \frac\lambda2 \triangleq 2ne + \frac\lambda2$
 
 **干涉条件，e为变量**
 
@@ -154,6 +156,18 @@ $\delta = 2ne + \frac\lambda2 = \left \{ \begin{array}{cc} k\lambda,(k = 1,2,3,.
 $r = \left \{ \begin{array}{cc} \sqrt{(k-\frac12)R\lambda},(k = 1,2,3,...) & \Longrightarrow 明环 \\ \sqrt{k\lambda},(k=0,1,2,...) & \Longrightarrow 暗环 \end{array}\right.$
 
 ##### 迈克尔孙干涉
+
+[Chap.34(1)](file:///Users/ulysses/Documents/大二上/普物2_14/WYW课件/Chap.36(1).pdf) silde 26、课本P29
+
+利用了等倾干涉
+
+补偿板G2作用：减小光程差，补偿光强(来自bdbk)
+
+光源为扩展光源：散射光 (若光源为单色光，则可用空气光程来补偿而不一定要G2了)
+
+<u>干涉图样等价于由M1与M2的虚像M2’形成，若M2稍倾斜，则形成等厚干涉条纹</u>
+
+若M2水平移动，则每移动半个波长，便有一个干涉条纹从视场中移过，因此$d= N\frac\lambda2$
 
 ### Ch36-2 衍射 Diffraction
 
@@ -192,8 +206,8 @@ $\Longrightarrow \left \{ \begin{array}{lll} \theta = 0 &  & 中央明纹中心 
 4. 总光程差：$(\Delta\varphi)_总 = n\Delta\varphi = 2\pi{\frac{a\sin\theta}{\lambda}}$
 5. 回到3：$A_\theta = \frac{nA_1}{\pi{\frac{a\sin\theta}{\lambda}}} \cdot \sin(\pi{\frac{a\sin\theta}{\lambda}}) = nA_1\frac{\sin\alpha}{\alpha}, \alpha = \pi{\frac{a\sin\theta}{\lambda}}$
 6. 若考虑中央(零级)明纹，则有$\displaystyle\lim_{\alpha\rightarrow0} \frac{\sin\alpha}{\alpha} = 1$，因此$A_{\theta=0} = nA_i$，其中$A_i$为其某束光的振幅
-7. 故有：$A_\theta = A_0{\frac{\sin\alpha}{\alpha}}(\alpha = \pi{\frac{a\sin\theta}{\lambda}})$
-8. 并且：$\frac{I}{I_0} = \frac{A_\theta^2}{A_0^2} = \frac{\sin^2\alpha}{\alpha^2}{}$
+7. ==故有：$A_\theta = A_0{\frac{\sin\alpha}{\alpha}}(\alpha = \pi{\frac{a\sin\theta}{\lambda}})$==
+8. ==并且：$\frac{I}{I_0} = \frac{A_\theta^2}{A_0^2} = \frac{\sin^2\alpha}{\alpha^2}{}$==
 
 ##### 光强分布曲线
 
@@ -232,7 +246,7 @@ $\theta \approx \sin \theta = 1.22\frac{\lambda}{D}{}$，其中D(2R)为孔的直
 
 * $\Delta\varphi = \frac{2\pi}{\lambda}d\sin\theta$
 * 主极大(Maxima、Order、Diffraction)，也叫谱线(spectra)
-  * 振幅矢量叠加在一条直线
+  * 振幅矢量在一个方向上
   * $\Delta\varphi = \pm k(2\pi), k = 0,1,2,...$
   * 不超过$\frac{d}{\lambda}{}$
 * 暗纹，极小(Minima)
@@ -264,21 +278,23 @@ $\begin{cases} a\sin\theta = k_1\lambda \\ d\sin\theta = k_2\lambda \end{cases}{
 
 由于第k级主极大左右分别是第kN-1与kN+1级亮纹，使波长为λ+Δλ的第k级主极大恰好与波长为λ的第kN+1级暗纹(极小)重合(两个颠倒用kN-1也是可以的)，则有：
 
-$\begin{cases} d\sin\theta = k(\lambda+\Delta\lambda) \\ Nd\sin\theta = (kN+1)\lambda \end{cases} \Longrightarrow R = kN$
+$\begin{cases} d\sin\theta = k(\lambda+\Delta\lambda) \\ Nd\sin\theta = (kN+1)\lambda \end{cases} \Longrightarrow R = \frac{\lambda}{\Delta \lambda} = kN$
 
 ### Ch36-3 Polarization
 
-* 线偏振光：只在一个方向上振动
-* 椭圆偏振光
+完全偏振光：（其实划分就是根据截面上振动图形）
+* 线偏振光：只在一个方向上振动（即若有两束光，则偏振角差为kπ即可，不要求2kπ）
+* 椭圆偏振：频率相同，相位差恒定的两个相互垂直的简谐振动；实验上可以经过波片之后o光与e光产生的相位差造成
+* 圆偏振光：Δφ=(2m±1/2)π的两平面偏振光叠加
 
 * 起偏：自然光 --> 偏振光
 * 检偏：检验
 
 **Law of Malus**
 
-* E~tranmitted~ = E~incident~cosθ
-* I~transmitted~ = I~incident~ cos^2^θ
-* For nature light: I=I~0~/2(积分)
+* $\rm E_{tranmitted} = E_{incident}\cosθ$
+* $\rm I_{transmitted} = I_{incident} cos^2θ$
+* For nature light: $\rm I=I_0/2$(积分)
 
 **旋光**
 
@@ -300,10 +316,9 @@ Premise：晶体具有各向异性(Optically anisotropic)
 
 * 寻常光(Ordinary)：在晶体表面遵循折射定律，即$n_1\sin i = n_2\sin r$
 * 非寻常光(Extraordinary)：
-
 * 光轴：vo与ve相等的方向
 * 主折射率：ne=c/ve
-
+* **振动(偏振)方向**：o光垂直(当前o光路与光轴所在平面)/e光在(当前e光路与光轴所在平面)内
 * positive crystal
   * vo > ve
   * no < ne
@@ -316,8 +331,6 @@ Premise：晶体具有各向异性(Optically anisotropic)
 四种情况见PPT36-4 Slide 13 / 大雾P98
 
 特别注意第三种，虽然e-ray与o-ray未分开，但波阵面是不重合的，因此仍有双折射现象存在
-
-椭圆偏振：频率相同，相位差恒定的两个相互垂直的简谐振动；实验上可以经过波片之后o光与e光产生的相位差造成
 
 1/4波片、1/2波片
 
