--- a/GP/普物2笔记_电磁.md
+++ b/GP/普物2笔记_电磁.md
@@ -210,7 +210,7 @@ $$
 
 正负有别：无论载流子带何种电荷，由于漂移方向不同，终是会偏向同一侧。
 
-### Ch26-1 Capacitance
+### Ch26-1 Capacitancelai
 
 #### 计算方式
 
@@ -822,11 +822,11 @@ $\large\frac q C = \varepsilon_L = -L\frac{di}{dt} = -L\frac{d\frac{dq}{dt}}{dt}
 | 电                                                           | 磁                                                           |
 | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | D=ε~0~E~0~ <br />E=E~0~-E' <br />P=ε~0~E'                    | H <br />B <br />M                                            |
-| $\vec P = \frac{\sum \vec p_i}{\Omega}$                      | $\vec M = \frac{\sum \vec \mu_i}{\Omega}$                    |
 | $\vec P = \chi_e \varepsilon_0 \vec E$<br />$\vec D = (\kappa_e \varepsilon_0) \vec E$ | $\vec M = \chi_m \vec H$<br />$\vec B = (\mu_r\mu_0) \vec H$ |
 | $\mathop\oint_s\vec P \cdot d \vec A = - \sum_{(ins)}q'_i$   | $\mathop\oint_s\vec M \cdot d \vec l = \sum_{(ins)}i_m$      |
-| $\vec D = \varepsilon_0 \vec E + \vec P= \varepsilon_0 \vec E_0$ | $\vec H = \frac{\vec B}{\mu_0} - \vec M$                     |
+| $\vec D = \varepsilon_0 \vec E + \vec P \xlongequal{Vacumn} \varepsilon_0 \vec E_0$ | $\vec B = \mu_0\vec H + \vec M = \mu_0 \vec H$ ($\vec H = \frac{\vec B}{\mu_0} - \vec M$) |
 | $\oint \vec D \cdot d \vec A = \sum_{ins}q_0$                | $\oint \vec H \cdot d \vec l = \sum_{ins}i_0$                |
+| $\sigma' = \vec P \cdot \vec n$                              | $\vec j = \vec M \times \vec n$                              |
 
 ### Ch33 Nature of Electromagnetic Waves
 
@@ -912,19 +912,19 @@ $\frac{\partial \vec E}{\partial z} = - \frac{\partial \vec B}{\partial t} \xrig
 
 > $\vec S = \vec E \times \vec H$
 
-> Def $P = \frac{P}{A}$
+> Def光强$I = \frac{P}{A}$
 
-$P = \overline S = S_{avg}$
+$I = \overline S = S_{avg}$
 
 ==注意：电磁波传播方向与坡印廷矢量相同==
 
 **S的变形**：
 
-利用公式$c^2 = \frac{1}{\varepsilon_0\mu_0}$与$\frac E B = c$
+==利用公式$c^2 = \frac{1}{\varepsilon_0\mu_0}$与$\frac E B = c$==
 
 $\vec S = \frac{\vec E \times \vec B}{\mu_0} = \frac{E^2}{\mu_0c} = \frac{cB^2}{\mu_0} \xlongequal{c^2 = \frac{1}{\mu_0\varepsilon_0}}\sqrt{\frac{\varepsilon_0}{\mu_0}}E^2$
 
-**强度**：$I = \overline S = 1/2 S_{\max}$(一阶均值)
+**强度**：$I = \overline S = \frac{E_mB_m}{2\mu_0}$(一阶均值)
 
 **能量**：$u = u_E + u_B$
 
