--- a/GP/普物2重要公式.md
+++ b/GP/普物2重要公式.md
@@ -165,11 +165,41 @@ $$
 | D=ε~0~E~0~ <br />E=E~0~-E' <br />P=ε~0~E'                    | H <br />B <br />M                                            |
 | $\vec P = \chi_e \varepsilon_0 \vec E$<br />$\vec D = (\kappa_e \varepsilon_0) \vec E$ | $\vec M = \chi_m \vec H$<br />$\vec B = (\mu_r\mu_0) \vec H$ |
 | $\mathop\oint_s\vec P \cdot d \vec A = - \sum_{(ins)}q'_i$   | $\mathop\oint_s\vec M \cdot d \vec l = \sum_{(ins)}i_m$      |
-| $\vec D = \varepsilon_0 \vec E + \vec P \xlongequal{Vacumn} \varepsilon_0 \vec E_0$ | $\vec H = \frac{\vec B}{\mu_0} - \vec M$                     |
+| $\vec D = \varepsilon_0 \vec E + \vec P \xlongequal{Vacumn} \varepsilon_0 \vec E_0$ | $\vec B = \mu_0\vec H + \vec M = \mu_0 \vec H$ ($\vec H = \frac{\vec B}{\mu_0} - \vec M$) |
 | $\oint \vec D \cdot d \vec A = \sum_{ins}q_0$                | $\oint \vec H \cdot d \vec l = \sum_{ins}i_0$                |
 | $\sigma' = \vec P \cdot \vec n$                              | $\vec j = \vec M \times \vec n$                              |
 
 ###### 电磁波
+
+$c^2 = \frac{1}{\varepsilon_0\mu_0}$
+
+$c = \frac E B$
+
+$\vec S = \vec E \times \vec H = \frac{\vec E \times \vec B}{\mu_0}$
+
+**强度**：$I = \overline S = \frac{E_mB_m}{2\mu_0}$(一阶均值)
+
+###### 交变场
+
+$$
+\Delta V_R = i_mR\sin(\omega t - \phi)
+\\
+\Delta V_L = L\frac{di}{dt} = L\omega i_m \sin(\omega t - \phi + \frac\pi 2)
+\\
+X_L = \omega L
+\\
+\Delta V_C = \frac{q}{C} = \frac{i_m}{\omega C}\sin(\omega t - \phi - \frac\pi 2)__
+\\
+X_C = \frac{1}{\omega C}
+\\
+\varepsilon_m = \sqrt{(\Delta V_R)_m^2 + [(\Delta V_L)_m - (\Delta V_C)_m]^2} = i_m\sqrt{R^2 + (X_L - X_C)^2}
+\\
+\phi = atan(\frac{(\Delta V_L)_m - (\Delta V_C)_m}{(\Delta V_R)_m}) = atan(\frac{X_L-X_C}{X_R})
+\\
+V_s/V_p= N_s/N_p
+\\
+等效电阻：Z_{eq} = (\frac{N_p}{N_s})^2 Z (Z是次级线圈上的阻抗，将其等效到初级线圈)（若是升压则等效电阻更小）{}
+$$
 
 ---
 
@@ -181,7 +211,9 @@ $\displaystyle \frac{1}{v} + \frac{1}{u} = {\frac{1}{f}}$
 
 $\displaystyle \frac{1}{v} + \frac{1}{-u} = {\frac{1}{f}}$
 
-磨镜者公式：$\displaystyle \frac{1}{f} = (\frac{n_2}{n_1}-1)(\frac{1}{R_1} - \frac{1}{R_2})$
+==记忆法：代入过焦点平行的情况，凸正凹负==
+
+磨镜者公式：$\displaystyle \frac{1}{f} = (\frac{n_2}{n_1}-1)(\frac{1}{R_1} - \frac{1}{R_2})$ (n1一般是真空的，R1与R2分别是两个表面的曲率半径(有符号数，规则同折射))，这个拿普通透镜的公式推一遍就记住了
 
 ###### 干涉
 
