--- a/马原.md
+++ b/马原.md
@@ -21,7 +21,7 @@
 
 **可知不可知**：思维是否能正确认识存在(存在和思维有没有同一性)；世上只有尚未认识之物，没有不可认识之物
 
-**辩证法与形而上学**：$\begin{cases} 用联系的、发展的、全面的观点看问题，事物发展的根本原因是事物的内部矛盾 \\ 静止的片面的观点看文题，否认事物内部矛盾的存在和作用 \end{cases}$
+**辩证法与形而上学**：$\begin{cases} 用联系的、发展的、全面的观点看问题， & 认为事物发展的根本原因是事物的内部矛盾 \\ 静止的片面的观点看文题， & 否认事物内部矛盾的存在和作用 \end{cases}$
 
 
 
@@ -197,14 +197,14 @@
 **无产阶级政党的群众路线**
 
 * **群众观点**和**群众路线**的理论基础：唯物史观关于人民群众是历史创造者的原理
-  * 马克思主义群众观点
-    * 坚信人民群众自己解放自己
-    * 全心全意为人民服务
-    * 一切向人民群众负责
-    * 虚心向群众学习
-  * 党的群众路线
-    * 一切为了群众，一切依靠群众，从群众中来，到群众中去的路线
-    * 党的生命线和根本工作路线
+    * 马克思主义群众观点
+        * 坚信人民群众自己解放自己
+        * 全心全意为人民服务
+        * 一切向人民群众负责
+        * 虚心向群众学习
+    * 党的群众路线
+        * 一切为了群众，一切依靠群众，从群众中来，到群众中去的路线
+        * 党的生命线和根本工作路线
 
 
 
@@ -215,8 +215,106 @@
 * 辩证理解
 
 
+## 资本
+
+### 资本主义形成
+
+**生产关系和生产方式**
+
+* 资本主义萌芽
+    1. 从小商品经济分化
+    2. 从商人和高利贷者转化而成
+* 资本的原始积累
+    1. 用暴力手段剥夺农民的土地（是资本原始积累过程的基础
+    2. 用暴力手段掠夺货币财富
+
+### 商品经济
+
+**产生的历史条件**
+
+* 历史条件
+    1. 社会分工出现
+    2. 生产资料和劳动产品属于不同的所有者
 
 
+
+**商品的二因素**
+
+* 使用价值
+    * 反应人与自然间的物质关系，是商品的自然属性
+    * 不是满足生产者自身需求而是别人的社会的需要的
+* 价值
+    * 决定商品交换的比例的
+    * 是凝结在商品中的无差别的一般人类劳动
+* 任何物品都有使用价值，但只有这种物品是劳动产品并**作为商品交换**时才有价值
+* **关系**：对立统一(要获得一个就得放弃另一个)
+
+
+
+**劳动的二重性**
+
+* 具体劳动：生产一定使用价值的具体形式的劳动，即有用劳动（形成商品的使用价值，劳动的自然属性）
+* 抽象劳动：撇开一切具体形式的、无差别的一般人类劳动，即人的体力和脑力消耗（形成商品的价值实体，劳动的社会属性）
+* 具体劳动和抽象劳动也是对立统一的关系
+
+
+
+**价值量的决定**
+
+
+* 由**社会必要劳动时间**决定
+* 社会必要劳动时间随**劳动生产率**变化而变化，劳动生产率越高，价值量越小
+
+
+
+**货币**
+
+* 商品交换的媒介
+* 一般等价物
+* 五个职能：价值尺度/流通手段/贮藏手段/支付手段/世界货币
+
+
+
+**价值规律**
+
+* 商品的价值量由生产商品的社会必要劳动时间决定，商品交换以价值量为基础，按照等价交换的原则进行，形成价值规律。
+* 价值规律是贯穿于整个商品经济的一般规律，它既支配商品生产，又支配商品流通。
+* 作用
+    1. 自发地调节生产资料和劳动力在社会各生产部门之间的分配比例
+    2. 自发地刺激社会生产力的发展
+    3. 自发地调节社会收入的分
+* 消极后果
+    1. 垄断，阻碍技术进步
+    2. 引起生产者两极分化
+    3. 自发调节 $\longrightarrow$ 可能出现比例失调的状况，造成 社会资源的浪费
+
+
+
+**商品经济基本矛盾**
+
+* 矛盾：劳动的二重性(另一个)：社会劳动+私人劳动
+* 社会性质 $\longleftarrow$ 社会分工
+* 私人性质 $\longleftarrow$ 生产资料私有制
+* 这一矛盾贯穿商品经济发展过程的始终
+    1. 决定商品经济本质和发展过程
+    2. 是商品经济其他一切矛盾的基础
+    3. 决定了商品生产者的命运
+
+    
+    
+**马克思劳动价值论**
+
+* 理论和实践意义
+    1. 马克思劳动价值论扬弃了英国古典政治经济学的观点，为剩余价值论的创立奠定了基础
+    2. 马克思劳动价值论揭示了商品经济的一般规律，为社会主义市场经济发展提供了理论指导
+* 深化对马克思劳动价值论的认识
+    1. 深化对马克思劳动价值论的认识，对生产性劳动作出新的界定
+    2. 深化对科技人员、经营管理人员在社会生产和价值创造中所起作用的认识
+    3. 深化对价值创造与价值分配关系的认识
+
+
+
+### 资本主义本质
 
 
 
